<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:context="ru.nikitaboiko.testapproom.ui.MainActivity">
    <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_sort"
            android:orderInCategory="20"
            android:title="@string/sort"
            android:icon="@drawable/ic_sort_black_24dp"
            app:showAsAction="always">
        <menu>
            <group android:id="@+id/menu_sort_group"
                   android:checkableBehavior="single">
                <item android:id="@+id/menu_sort_model"
                      android:title="@string/sort_by_model"/>
                <item android:id="@+id/menu_sort_submodel"
                      android:title="@string/sort_by_submodel"/>
                <item android:id="@+id/menu_sort_number"
                      android:title="@string/sort_by_number"/>
                <item android:id="@+id/menu_sort_age"
                      android:title="@string/sort_by_age"/>
                <item android:id="@+id/menu_sort_color"
                      android:title="@string/sort_by_color"/>
            </group>
        </menu>
    </item>
</menu>
